Fixing form layout and spacing, added basic typescript

--- a/src/App.scss
+++ b/src/App.scss
@@ -16,6 +16,7 @@ $fw-800i: 800;
 /*
 TODO:
     fix button placement, try not using position absolute
+    fix form spacing
 */
 
 body {
@@ -54,6 +55,7 @@ form {
     display: flex;
     flex-direction: row;
     position: relative;
+    gap: 1rem;
     border-bottom: 0.1rem solid $neutral-grey;
     padding-bottom: 4rem;
 }
@@ -66,13 +68,14 @@ input {
     border: 0.05rem solid $neutral-grey;
     border-radius: 0.2rem;
     padding: 0.5rem;
-    max-width: 4rem;
+    // max-width: 4rem;
+    max-width: 5rem;
     font-size: 1rem;
 }
 
 button {
     position: absolute;
-    top: 4.5rem;
+    top: 8.8rem;
     left: 7rem;
     border: none;
     background-color: transparent;
